--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "npm run build && gh-pages -d dist",
-    "test": "vitest"
+    "test": "vitest",
+    "vervet:build": "npx vervet merge --config vervet.yaml --output public/openapi.yaml"
   },
   "dependencies": {
     "react": "^19.1.1",
